<resources>
    <string name="app_name">Crostata</string>
    <string name="become_a_citizen"><a href="https://www.google.com">
        Become a Citizen</a></string>
    <string name="toolbar_home">Home</string>
    <string name="toolbar_search">Search</string>
    <string name="toolbar_community">Community</string>
    <string name="toolbar_profile">My Profile</string>
    <string name="app_tagline">The People\'s Network</string>
    <string name="birth_id">Birth ID</string>
    <string name="useravatar">userAvatar</string>
    <string name="password">Password</string>
    <string name="keyavatar">keyAvatar</string>
    <string name="sign_in">Sign In</string>
    <string name="developer">Ministry of Communication\nBanana Republic of Palmyra</string>
    <string name="profile_image">profileImage</string>
    <string name="sample_name">Darwin Ceniceros</string>
    <string name="clock">clock</string>
    <string name="sample_time">45 mins ago</string>
    <string name="sample_date">Jan 31, \'11</string>
    <string name="profile">Profile</string>
    <string name="sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="report">Report</string>
    <string name="_0">0</string>
    <string name="_123">123</string>
    <string name="up_like_button">up like button</string>
    <string name="comment_button">comment button</string>
    <string name="report_button">report button</string>
    <string name="content_image">content image</string>
    <string name="down_like_button">down like button</string>
    <string name="brplogo">brpLogo</string>
    <string name="server_url">http://192.168.1.123:3000/api/v1/</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolbar_add_post">New Post</string>
    <string name="comments">Comments</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="sample_name_all_caps">DARWIN CENICEROS</string>
    <string name="info_message">Visit your nearest Citizen Help Desk</string>
    <string name="comments_caps">COMMENTS</string>
    <string name="posts">Posts</string>
    <string name="sample_comment">Can you not please?</string>
    <string name="index_own_pre">Your Patriot Index is \u0020</string>
    <string name="sample_area">130 ha</string>
    <string name="security5">Internet Security Agency</string>
    <string name="security4">Hyperlocal Citizen Surveillance</string>
    <string name="security3">Fake News Correction System</string>
    <string name="security2">102,794 Informers</string>
    <string name="security1">44,586 CCTVs</string>
    <string name="security_amp_privacy">Security &amp; Privacy</string>
    <string name="camps_raided">Camps Raided</string>
    <string name="territory_gained">Territory Gained</string>
    <string name="_7_174">7,174</string>
    <string name="rebels_jailed">Rebels Jailed</string>
    <string name="_837">837</string>
    <string name="rebels_killed">Rebels Killed</string>
    <string name="counter_insurgency">Counter Insurgency</string>
    <string name="ration3">1 can Vegetable Stew</string>
    <string name="ration2">500 ml Water</string>
    <string name="ration1">125 gms Bread</string>
    <string name="food_rations">Food Rations</string>
    <string name="export_revenue">Export Revenue</string>
    <string name="money">P$ 11.94 Billion</string>
    <string name="production">Production</string>
    <string name="weight">12.8 Metric Tonnes</string>
    <string name="employment">Employment</string>
    <string name="percent">99.98%</string>
    <string name="banana_cultivation">Banana Cultivation</string>
    <string name="our_progress_this_year">Our Progress this year</string>
    <string name="positive_con1">Donated P$ 5,206 to the National Security Fund</string>
    <string name="positive_con2">Reported 21 Citizens</string>
    <string name="negetive_con1">Disrespected the President online</string>
    <string name="your_patriot_index_is_385">Your Patriot Index is %1$d</string>
    <string name="toolbar_vigilance">Vigilance</string>
    <string name="profile_patriot_index">Has a Patriot Index of %1$d</string>
    <string name="profile_gender">Male</string>
    <string name="profile_dob">Born %1$s</string>
    <string name="profile_profession">Peasant</string>
    <string name="add_post">Add Post</string>
    <string name="ranked">Ranked %1$s</string>
    <string name="all_posts">All Posts</string>
    <string name="p_index">P Index</string>
    <string name="_48">48</string>
    <string name="el_presidente_s_monetary_fund">President\'s Monetary Fund</string>
    <string name="p_4_71_billion">P$ 4.71 Billion</string>
    <string name="our_achievements">Our Achievements</string>
    <string name="economy">Economy</string>
    <string name="action">action</string>
    <string name="internet_connection_failed">Internet Connection Failed</string>
    <string name="check_your_internet_amp_try_again">Check your Internet &amp; try again</string>
    <string name="toolbar_signOut">Sign Out</string>
    <string name="donate_money">Donate Money</string>
    <string name="very_high">Very High</string>
    <string name="job_satisfaction">Job Satisfaction</string>
    <string name="be_an_informer">Be an Informer</string>
    <string name="enlist">Enlist</string>
    <string name="_86_comments">86 Comments</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="app_version">v0.1.0 Beta</string>
    <string name="help_amp_feedback">Help &amp; Feedback</string>
    <string name="about_crostata">Terms of Use</string>
    <string name="title_activity_search">Search</string>
    <string name="approved">Approved</string>
    <string name="approve_image">Approve Image</string>
    <string name="_74_likes">74 likes</string>
    <string name="like_button">Like Button</string>
    <string name="no_more_comments">No more comments</string>
    <string name="refresh_button">refresh button</string>
    <string name="add_image">Add Image</string>
    <string name="remove_image">Remove Image</string>
    <string name="attached_image">Attached Image</string>
    <string name="a_warning">A warning</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="refresh">Refresh</string>
    <string name="no_more_posts">No more posts</string>
    <string name="terms_of_use_1">Crostata is the only, state approved, social networking service available for the citizens of Palmyra.</string>
    <string name="terms_of_use_2">This service is being provided free of charge to all Palmyrene citizens.</string>
    <string name="terms_of_use_3">Use of any other social networking service is against the law and will be treated as an act of political dissidence.</string>
    <string name="terms_of_use_4">While using the service, the following points should be remembered:</string>
    <string name="terms_of_use_5">\u2022 Palmyrene Code of Conduct should always be obeyed when interacting with the service in any form.</string>
    <string name="terms_of_use_6">\u2022 All interactions-i.e., Posts &amp; Comments, by the user will be recorded and can be used to justify a future penalty.</string>
    <string name="terms_of_use_7">\u2022 Penalties can range from Patriot Index deductions to admittance in the President\'s Relocation Programme.</string>
    <string name="terms_of_use_8">\u2022 Content meant to spread political dissidence should be reported as soon as possible to the Internet Security Agency.</string>
    <string name="terms_of_use_9">\u2022 The user whose content is deemed inappropriate by the Internet Security Agency, will be subject to such penalty as the agency thinks is a appropriate punishment.</string>
    <string name="terms_of_use_10">\u2022 In event that the report is found to be valid, the reporter will be rewarded with Patriot Index points.</string>
    <string name="terms_of_use_11">Any future terms of use, that may be added here, will apply retroactively to all past interactions.</string>
    <string name="terms_of_use_12">By continuing to use this service, you agree to abide by these terms and will accept the consequences of violating them.</string>
    <string name="sample_birthid">067845504</string>
    <string name="sample_password">Password1</string>
    <string name="need_help">Need Help?</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="post_total">%1$d</string>
    <string name="comment_total">%1$d</string>
    <string name="key_app_theme" />
    <string name="baseurl">http://192.168.1.123:3000/api/v1/</string>
    <string name="sample_tweet"><![CDATA[\@Maryann_Schneider16 @Francisco94 @Judith_Schiller10 @Kristy29 Congratulations Ethan &amp; Snore and Cough! 🥳]]></string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_post">Post Activity</string>
</resources>
