<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:checkable="true"
            android:checked="true"
            android:enabled="true"
            android:icon="@drawable/ic_home"
            android:orderInCategory="1"
            android:title="@string/toolbar_home"
            app:showAsAction="always" />

        <item
            android:id="@+id/community"
            android:icon="@drawable/ic_location_city"
            android:orderInCategory="2"
            android:title="@string/toolbar_community"
            app:showAsAction="always" />
        <item
            android:id="@+id/vigilance"
            android:icon="@drawable/ic_supervisor_account"
            android:orderInCategory="3"
            android:title="@string/toolbar_vigilance"
            app:showAsAction="ifRoom" />
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/addPost"
            android:checkable="false"
            android:icon="@drawable/ic_add_circle"
            android:orderInCategory="4"
            android:title="@string/add_post"
            app:showAsAction="ifRoom" />
    </group>

    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_person"
            android:orderInCategory="5"
            android:title="@string/toolbar_profile"
            android:checkable="false"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/signOut"
            android:checkable="false"
            android:icon="@drawable/ic_action_trash"
            android:orderInCategory="6"
            android:title="@string/toolbar_signOut"
            app:showAsAction="ifRoom" />
    </group>
</menu>